# DummyEngine

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Address.cpp  Android.mk  Anim.cpp  AssetFile.cpp  AssetFile.h  AssetFileIO.cpp  AssetFileIO.h  AsyncFileReader.cpp  AsyncFileReader.h  AsyncFileReader_aio.cpp  AsyncFileReader_win32.cpp  BinaryTree.h  BitmapAlloc.h  BitmapFont.cpp  BitmapFont.h  Buffer.h  ButtonBase.h  ButtonImage.cpp  ButtonImage.h  ButtonText.h  CHANGELOG.md  CMakeLists.txt  Camera.cpp  Camera.h  Compress.h  Config.h  Container.h  Context.cpp  Context.h  Cursor.h  Delegate.h  DynLib.cpp  DynLib.h  (+197 more)
SW/: CMakeLists.txt  README.md  SWbuffer.c  SWbuffer.h  SWcompress.h  SWcontext.c  SWcontext.h  SWframebuffer.c  SWframebuffer.h  SWprogram.c  SWtexture.c  SWzbuffer.h
SW/tests/: test_framebuffer.c  test_pixels.c  test_texture.c
src/: CMakeLists.txt
src/DemoApp/: CMakeLists.txt  DemoApp.cpp  DemoApp.h  com_serg_occdemo_LibJNI.h  main.cpp  main_android.cpp  main_pc.cpp
src/DemoLib/: CMakeLists.txt  Viewer.cpp  Viewer.h  exports.cpp
src/DemoLib/Managers/: Renderer.cpp  Renderer.h  RendererGL.cpp  SceneData.h  SceneManager.cpp  SceneManager.h  SceneManager_BVH.cpp
src/DemoLib/Renderer/: FrameBuf.h  FrameBufGL.cpp  Renderer.cpp  Renderer.h  Renderer_Backend_GLES3.cpp  Renderer_Frontend.cpp  Renderer_GLES3.cpp  Renderer_GL_Defines.inl  Renderer_GL_Shaders.inl  Renderer_Structs.h  TextureAtlas.cpp  TextureAtlas.h  _Renderer.cpp  __skydome_mesh.inl  __sphere_mesh.inl
src/DemoLib/Scene/: FrameBuf.h  FrameBufGL.cpp  ProbeStorage.h  ProbeStorageGL.cpp  Renderer.cpp  Renderer.h  RendererGL.cpp  RendererGL_ES3.cpp  Renderer_GLES3.cpp  Renderer_GL_Shaders.inl  SceneData.cpp  SceneData.h  SceneManager.cpp  SceneManager.h  SceneManager_ASS.cpp  SceneManager_BVH.cpp  SceneManager_PT.cpp  TextureAtlas.cpp  TextureAtlas.h  _Scene.cpp
src/DemoLib/States/: GSCreate.h  GSDrawTest.cpp  (+2 more)
src/DummyApp/: CMakeLists.txt  DummyApp.cpp  DummyApp.h  DummyApp.rc  DummyApp_glx.cpp  DummyApp_lin.cpp  DummyApp_sdl.cpp  DummyApp_vk_osx.cpp  DummyApp_vk_win32.cpp  DummyApp_vk_xlib.cpp  DummyApp_wgl.cpp  DummyApp_win32.cpp  com_serg_dummyapp_LibJNI.h  main_android.cpp  main_pc.cpp
src/DummyLib/: CMakeLists.txt  Viewer.cpp  Viewer.h
src/Eng/: .gitignore  .gitrepo  CHANGELOG.md  CMakeLists.txt  Config.h  Eng.cpp  Eng.h  FlowControl.cpp  FlowControl.h  FrameInfo.h  GameBase.cpp  GameBase.h  GameState.h  GameStateManager.cpp  GameStateManager.h  Log.cpp  Log.h  README.md  Random.cpp  Random.h  TimedInput.cpp  TimedInput.h  ViewerBase.cpp  ViewerBase.h  ViewerState.h  ViewerStateManager.cpp  ViewerStateManager.h  _Eng.cpp  _Eng_Gui.cpp  _Eng_Renderer.cpp  _Eng_Renderer0.cpp  _Eng_Renderer1.cpp  _Eng_Scene.cpp  _Eng_Utils.cpp
src/Gui/: BaseElement.cpp  BaseElement.h  BitmapFont.cpp  BitmapFont.h  ButtonBase.cpp  ButtonImage.cpp  ButtonText.cpp  CMakeLists.txt  Cursor.cpp  EditBox.cpp  EditBox.h  Frame.cpp  Frame.h  Image.cpp  Image.h  Image9Patch.cpp  ImageNinePatch.cpp  ImageNinePatch.h  LinearLayout.cpp  LinearLayout.h  Renderer.cpp  Renderer.h  RendererGL.cpp  RendererSW.cpp  TypeMesh.cpp  Utils.cpp  Utils.h  _Gui.cpp
src/Modl/: CMakeLists.txt  ModlApp.cpp  ModlApp.h  ModlAppGL.cpp  ModlApp_wgl.cpp
src/Net/: .gitrepo  Address.cpp  Address.h  BitMsg.cpp  BitMsg.h  CHANGELOG.md  CMakeLists.txt  Compress.cpp  Compress.h  HTTPBase.cpp  HTTPBase.h  HTTPRequest.cpp  HTTPResponse.cpp  InterprocessLock.h  NAT_PCP.cpp  NAT_PCP.h  NAT_PMP.cpp  NAT_PMP.h  PacketQueue.h  ReliabilitySystem.cpp  ReliabilitySystem.h  ReliableUDPConnection.cpp  ReliableUDPConnection.h  Socket.cpp  Socket.h  Types.h  UDPConnection.cpp  UDPConnection.h  Var.h  VarContainer.cpp  VarContainer.h  WsConnection.cpp  WsConnection.h  _Net.cpp
src/Phy/: .gitrepo  Body.h  CMakeLists.txt  Core.h  MMat.h  MQuat.h  Shape.cpp  Utils.cpp  Utils.h  _Phy.cpp
src/Ray/: .gitrepo  Bitmask.h  CMakeLists.txt  Ray.cpp  RendererBase.h  RendererFactory.cpp  SceneBase.h  Span.h  _Ray.cpp  _Ray_Avx.cpp  _Ray_Avx2.cpp  _Ray_Sse2.cpp
src/Ren/: .appveyor.yml  AccStructure.cpp  AccStructure.h  AccStructureVK.cpp  Anim.cpp  Anim.h  Buffer.cpp  Buffer.h  BufferGL.cpp  BufferSW.cpp  BufferVK.cpp  CMakeLists.txt  CPUFeatures.cpp  CPUFeatures.h  Camera.cpp  Camera.h  Common.h  Context.cpp  Context.h  ContextGL.cpp  ContextSW.cpp  ContextVK.cpp  DebugMarker.h  DescriptorPool.h  DescriptorPoolVK.cpp  DrawCall.h  DrawCallGL.cpp  DrawCallVK.cpp  Fence.h  FenceGL.cpp  FenceVK.cpp  Fixed.h  Framebuffer.h  FramebufferGL.cpp  FramebufferVK.cpp  Fwd.h  GL.h  GLCtx.cpp  GLCtx.h  GLExt.cpp  (+95 more)
src/Snd/: Buffer.h  BufferAL.cpp  CMakeLists.txt  Context.cpp  Context.h  ContextAL.cpp  HashMap32.h  Log.h  Source.h  SourceAL.cpp  SparseArray.h  Storage.h  String.h  Utils.cpp  Utils.h  _Snd.cpp
src/Sys/: .gitignore  .travis.yml  AssetFile.cpp  AssetFile.h  AssetFileIO.cpp  AsyncFileReader.cpp  AsyncFileReader.h  AsyncFileReader_aio.cpp  AsyncFileReader_posix_aio.cpp  AsyncFileReader_unix.cpp  AsyncFileReader_win32.cpp  BinaryTree.h  BitmapAlloc.h  CMakeLists.txt  DynLib.cpp  DynLib.h  InplaceFunction.h  Json.cpp  Json.h  MemBuf.h  MonoAlloc.h  Pack.cpp  Platform.h  PlatformSDL.cpp  PoolAlloc.h  README.md  Signal_.h  SmallVector.h  ThreadPool.h  ThreadWorker.h  Time.cpp  Time_.h  Variant.h  WindowRect.cpp  _CustomTypes.natvis  _Sys.cpp
src/demo_app/: CMakeLists.txt  DemoApp.cpp  DemoApp.h
src/demo_lib/: CMakeLists.txt  Viewer.cpp  Viewer.h  exports.cpp
src/modl/: CMakeLists.txt  ModlApp.cpp  ModlApp.h  ModlAppGL.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp  test_address.cpp  test_alloc.cpp  test_anim.cpp  test_async_file.cpp  test_bitmsg.cpp  test_buffer.cpp  test_common.h  test_http.cpp  test_json.cpp  test_mat.cpp  test_material.cpp  test_mesh.cpp  test_optional.cpp  test_pack.cpp  test_pmp.cpp  test_programSW.cpp  test_reliable_udp_connection.cpp  test_signal.cpp  test_sparse_array.cpp  test_storage.cpp  test_tcp_socket.cpp  test_texture.cpp  test_udp_socket.cpp  test_vector.cpp  test_widgets.cpp
(+8666 files in other folders)
